Update API docs and move to new theme

--- a/docs/api/1.0.6.md
+++ b/docs/api/1.0.6.md
@@ -2,7 +2,7 @@
 
 ## Unitconversion
 
-### tTokg *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### tTokg *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input Tonnes into kilograms</p>
 
@@ -41,7 +41,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The Tonne values from UnitConversionForTonneToKilogramStream will be converted to kilograms and inserted in to the OutMediationStream</p>
 
-### gTomg *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### gTomg *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input grams into milligrams</p>
 
@@ -80,7 +80,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The gram values from UnitConversionForGramToMilligramStream will be converted to milligrams and inserted in to the OutMediationStream</p>
 
-### gToug *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### gToug *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input grams into micrograms</p>
 
@@ -119,7 +119,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The gram values from UnitConversionForGramToMicrogramStream will be converted to micrograms and inserted in to the OutMediationStream</p>
 
-### kgToLT *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### kgToLT *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input kilograms into imperial tons</p>
 
@@ -158,7 +158,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The kilogram values from UnitConversionForKilogramToImperialTonStream will be converted to imperial tons and inserted in to the OutMediationStream</p>
 
-### kgTot *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### kgTot *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input kilograms into Tonnes</p>
 
@@ -197,7 +197,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The kilogram values from UnitConversionForKilogramToTonneStream will be converted to Tonnes and inserted in to the OutMediationStream</p>
 
-### kgToST *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### kgToST *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input kilograms into US tons</p>
 
@@ -236,7 +236,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The kilogram values from UnitConversionForKilogramToUSTonStream will be converted to US tons and inserted in to the OutMediationStream</p>
 
-### kgTog *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### kgTog *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input kilograms into grams</p>
 
@@ -275,7 +275,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The kilogram values from UnitConversionForKilogramToGramStream will be converted to grams and inserted in to the OutMediationStream</p>
 
-### gTokg *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### gTokg *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input grams into kilograms</p>
 
@@ -314,7 +314,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The gram values from UnitConversionForGramToKilogramStream will be converted to kilograms and inserted in to the OutMediationStream</p>
 
-### kgTolb *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### kgTolb *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input kilograms into pounds</p>
 
@@ -353,7 +353,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The kilogram values from UnitConversionForKilogramToPoundStream will be converted to pounds and inserted in to the OutMediationStream</p>
 
-### kgTost *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### kgTost *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input kilograms into imperial stones</p>
 
@@ -392,7 +392,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The kilogram values from UnitConversionForKilogramToStonemStream will be converted to imperial stones and inserted in to the OutMediationStream</p>
 
-### tTog *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### tTog *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input Tonnes into grams</p>
 
@@ -431,7 +431,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The Tonne values from UnitConversionForTonneToGramStream will be converted to grams and inserted in to the OutMediationStream</p>
 
-### kgTooz *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### kgTooz *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input kilograms into ounces</p>
 
@@ -470,7 +470,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The kilogram values from UnitConversionForKilogramToOunceStream will be converted to ounces and inserted in to the OutMediationStream</p>
 
-### cmToin *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### cmToin *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input centimeters into inches</p>
 
@@ -509,7 +509,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The centimeter values from UnitConversionForCentimetreToInchStream will be converted to inches and inserted in to the OutMediationStream</p>
 
-### mTocm *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### mTocm *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input meters into centimeters</p>
 
@@ -548,7 +548,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The meter values from UnitConversionForMetreToCentimetreStream will be converted to centimeters and inserted in to the OutMediationStream</p>
 
-### cmToum *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### cmToum *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input centimeters into micrometers</p>
 
@@ -587,7 +587,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The centimeter values from UnitConversionForCentimetreToMicrometreStream will be converted to micrometers and inserted in to the OutMediationStream</p>
 
-### kmToyd *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### kmToyd *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input kilometers into yards</p>
 
@@ -626,7 +626,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The kilometer values from UnitConversionForKilometreToYardStream will be converted to yards and inserted in to the OutMediationStream</p>
 
-### cmTokm *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### cmTokm *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input centimeters into kilometers</p>
 
@@ -665,7 +665,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The centimeter values from UnitConversionForCentimetreToKilometreStream will be converted to kilometers and inserted in to the OutMediationStream</p>
 
-### kmTomi *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### kmTomi *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input kilometers into miles</p>
 
@@ -704,7 +704,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The kilometer values from UnitConversionForKilometreToMileStream will be converted to miles and inserted in to the OutMediationStream</p>
 
-### miTokm *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### miTokm *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input miles into kilometers</p>
 
@@ -743,7 +743,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The mile values from UnitConversionForMileToKilometreStream will be converted to kilometers and inserted in to the OutMediationStream</p>
 
-### kmTocm *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### kmTocm *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input kilometers into centimeters</p>
 
@@ -782,7 +782,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The kilometer values from UnitConversionForKilometreToCentimetreStream will be converted to centimeters and inserted in to the OutMediationStream</p>
 
-### cmTomi *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### cmTomi *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input centimeters into miles</p>
 
@@ -821,7 +821,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The centimeter values from UnitConversionForCentimetreToMileStream will be converted to miles and inserted in to the OutMediationStream</p>
 
-### mTomm *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### mTomm *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input meters into millimeters</p>
 
@@ -860,7 +860,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The meter values from UnitConversionForMetreToMillimetreStream will be converted to millimeters and inserted in to the OutMediationStream</p>
 
-### mToyd *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### mToyd *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input meters into yards</p>
 
@@ -899,7 +899,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The meter values from UnitConversionForMetreToYardStream will be converted to yards and inserted in to the OutMediationStream</p>
 
-### kmToin *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### kmToin *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input kilometers into inches</p>
 
@@ -938,7 +938,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The kilometer values from UnitConversionForKilometreToInchStream will be converted to inches and inserted in to the OutMediationStream</p>
 
-### mToft *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### mToft *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input meters into feet</p>
 
@@ -977,7 +977,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The meter values from UnitConversionForMetreToFootStream will be converted to feet and inserted in to the OutMediationStream</p>
 
-### cmTonm *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### cmTonm *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input centimeters into nanometers</p>
 
@@ -1016,7 +1016,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The centimeter values from UnitConversionForCentimetreToNanometreStream will be converted to nanometers and inserted in to the OutMediationStream</p>
 
-### MmTokm *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### MmTokm *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input megameters into kilometers</p>
 
@@ -1055,7 +1055,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The megameters values from UnitConversionForMegametreToKilometreStream will be converted to kilometers and inserted in to the OutMediationStream</p>
 
-### cmTom *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### cmTom *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input centimeters into meters</p>
 
@@ -1094,7 +1094,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The centimeter values from UnitConversionForCentimetreToMeterStream will be converted to meters and inserted in to the OutMediationStream</p>
 
-### kmTonm *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### kmTonm *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input kilometers into nanometers</p>
 
@@ -1133,7 +1133,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The kilometer values from UnitConversionForKilometreToNanometreStream will be converted to nanometers and inserted in to the OutMediationStream</p>
 
-### kmTom *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### kmTom *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input kilometers into meters</p>
 
@@ -1172,7 +1172,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The kilometer values from UnitConversionForKilometreToMetreStream will be converted to meters and inserted in to the OutMediationStream</p>
 
-### kmToft *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### kmToft *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input kilometers into feet</p>
 
@@ -1211,7 +1211,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The kilometer values from UnitConversionForKilometreToFootStream will be converted to feet and inserted in to the OutMediationStream</p>
 
-### cmToyd *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### cmToyd *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input centimeters into yards</p>
 
@@ -1250,7 +1250,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The centimeter values from UnitConversionForCentimetreToYardStream will be converted to yards and inserted in to the OutMediationStream</p>
 
-### cmToft *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### cmToft *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input centimeters into feet</p>
 
@@ -1289,7 +1289,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The centimeter values from UnitConversionForCentimetreToFootStream will be converted to feet and inserted in to the OutMediationStream</p>
 
-### kmToum *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### kmToum *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input kilometers into micrometers</p>
 
@@ -1328,7 +1328,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The kilometer values from UnitConversionForKilometreToMicrometreStream will be converted to micrometers and inserted in to the OutMediationStream</p>
 
-### cmTomm *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### cmTomm *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input centimeters into millimeters</p>
 
@@ -1367,7 +1367,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The centimeter values from UnitConversionForCentimetreToMillimetreStream will be converted to millimeters and inserted in to the OutMediationStream</p>
 
-### kmTomm *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### kmTomm *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input kilometers into millimeters</p>
 
@@ -1406,7 +1406,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The kilometer values from UnitConversionForKilometreToMillimetreStream will be converted to millimeters and inserted in to the OutMediationStream</p>
 
-### lTom3 *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### lTom3 *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input liters into cubic meters</p>
 
@@ -1445,7 +1445,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The liter values from UnitConversionForLitreToCubicmetreStream will be converted to cubic meters and inserted in to the OutMediationStream</p>
 
-### mlTol *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### mlTol *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input milliliters into liters</p>
 
@@ -1484,7 +1484,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The milliliter values from UnitConversionForMillilitreToLitreStream will be converted to liters and inserted in to the OutMediationStream</p>
 
-### lToml *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### lToml *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input liters into milliliters</p>
 
@@ -1523,7 +1523,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The liter values from UnitConversionForLitreToMillilitreStream will be converted to milliliters and inserted in to the OutMediationStream</p>
 
-### m3Tol *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### m3Tol *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input cubic meters into liters</p>
 
@@ -1562,7 +1562,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The cubic meter values from UnitConversionForCubicmetreToLitreStream will be converted to liters and inserted in to the OutMediationStream</p>
 
-### dToh *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### dToh *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input days into hours</p>
 
@@ -1601,7 +1601,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The day values from UnitConversionForDayToHourStream will be converted to hours and inserted in to the OutMediationStream</p>
 
-### yTod *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### yTod *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input years into days</p>
 
@@ -1640,7 +1640,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The year values from UnitConversionForYearToDayStream will be converted to days and inserted in to the OutMediationStream</p>
 
-### sToms *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### sToms *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input seconds into milliseconds</p>
 
@@ -1679,7 +1679,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The second values from UnitConversionForSecondToMillisecondStream will be converted to milliseconds and inserted in to the OutMediationStream</p>
 
-### hTos *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### hTos *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input hours into seconds</p>
 
@@ -1718,7 +1718,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The hour values from UnitConversionForHourToSecondStream will be converted to seconds and inserted in to the OutMediationStream</p>
 
-### hTom *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### hTom *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input hours into minutes</p>
 
@@ -1757,7 +1757,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The hour values from UnitConversionForHourToMinuteStream will be converted to minutes and inserted in to the OutMediationStream</p>
 
-### sTons *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### sTons *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input seconds into nanoseconds</p>
 
@@ -1796,7 +1796,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The second values from UnitConversionForSecondToNanosecondStream will be converted to nanoseconds and inserted in to the OutMediationStream</p>
 
-### sTous *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### sTous *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input seconds into microseconds</p>
 
@@ -1835,7 +1835,7 @@ insert into OutMediationStream;
 ```
 <p style="word-wrap: break-word">The second values from UnitConversionForSecondToMicrosecondStream will be converted to microseconds and inserted in to the OutMediationStream</p>
 
-### mTos *<a target="_blank" href="https://wso2.github.io/siddhi/documentation/siddhi-4.0/#function">(Function)</a>*
+### mTos *<a target="_blank" href="https://siddhi.io/en/v4.x/docs/query-guide/#function">(Function)</a>*
 
 <p style="word-wrap: break-word">Converts the input minutes into seconds</p>
 
